2005-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-doc.el (haskell-doc-show-type): Assume that the availability
	of display-message won't change at runtime.

	* haskell-font-lock.el (haskell-font-lock-keywords-create): Try and
	work around a bug that seems to be in Emacs-21.3 rather than in
	haskell-font-lock.el.  Reported by Steve Chamberlain <sac@pobox.com>.

2005-07-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (haskell-program-name): Fix defcustom delcaration.

	* haskell-doc.el (haskell-doc-message): Remove.
	(haskell-doc-show-type): Inline it.  Don't do anything for if there's
	no doc to show.

2005-02-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-hugs.el (haskell-hugs-mode-map):
	* haskell-ghci.el (haskell-ghci-mode-map): Remove.

2005-01-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-inside-comment): Don't assume that
	column(pos+2) = column(pos)+2.
	(haskell-indent-indentation-info): Fix indentation of , and ;.
	Add arg `start'.  Restrict choice of indentation for comments.
	(haskell-indent-event-type): Remove.
	(haskell-indent-last-info): New var.
	(haskell-indent-cycle): Use it to store info from one invocation to
	the next, so we can do cycling outside of the function.
	Don't cycle directly any more.  Instead, recognize repeated invocations
	via last-command and friends.
	Use indent-line-function rather than hardcoding indent-to-left-margin.
	(haskell-indent-insert-where): Don't save excursion.
	(haskell-indent-layout-indent-info): Minor simplifications.
	(haskell-indent-line-indentation): Don't ignore code on a line
	before a string.

	* haskell-hugs.el (haskell-hugs-last-loaded-file): Remove.
	(haskell-hugs-start-process): Fix misuse of make-variable-buffer-local.
	(haskell-hugs-go): Quote file name.  Simplify.

	* haskell-ghci.el (haskell-ghci-last-loaded-file): Remove.
	(haskell-ghci-start-process): Fix misuse of make-variable-buffer-local.