@@ -1,3 +1,7 @@
+2005-08-24  Steve Chamberlain  <sac@pobox.com>  (tiny patch)
+
+	* haskell-doc.el (haskell-doc-message): Paren typo.
+
 2005-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* haskell-doc.el (haskell-doc-show-type): Assume that the availability
